# intellivault

./: .gitignore  README.md  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
mkadb/: Cargo.toml
mkadb/src/: database.rs  group.rs  main.rs  matcher.rs  summary.rs
specs/: analysis-pipeline.md  main.md
src/: commands.ts  main.ts  openai.ts
src/ui/: ChatView.ts  SettingTab.ts
