[package]
name = "mkadb"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] } # Use the latest version available
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.27", features = ["bundled"] }
async-std = "1.11"


